src/assets/styles/Pages_styles/CategoryStyle.scss
.resSearchFiveFilms {
    // justify-content: center;
    // border-radius: 0.5rem;
    // border-width: 2px;
    // border-color: rgba(255, 255, 255, 0.05);
    // background-color: rgba(0, 0, 0, 0.6);
    // margin-top: 20px;
    width: 100%;
    margin-left: 50px;
  }
  
  .header {
    display: flex;
    font-family: Tahoma, Arial, Verdana, sans-serif;
    font-size: 25px;
    // border-radius: 0.5rem;
    // border-width: 2px;
    // border-color: rgba(255, 255, 255, 0.05);
    // background-color: rgba(0, 0, 0, 0.6);
    margin-top: 100px;
    padding: 10px;
    margin-left: 50px;
    // justify-content: center;
    cursor: pointer;
  }
  
  .observer {
    position: relative;
    top:-435px;
    height: 20px;
    margin-bottom: 25px;
  }

  .icon_right {
    height: 15px;
    margin-top: 10px;
    margin-left: 10px;
    opacity: 0;
    transition: all 0.4s ease;
  }
  
  .header:hover{
  .icon_right{
     opacity:1;
  }
  }

